move modules plugin to own file. no module path for :test:framework